# RAGSystemDemo

./: .gitignore  RAG_with_DeepSeek_R1.ipynb  README.md  pyproject.toml  script.py  server.py
products/: chronospoon.json  gravitas_sneakers.json  holo_mirror.json  plasma_towel.json  quantum_pen.json
