[project]
name = "rag-deepseek"
version = "0.1.0"
description = ""
authors = [
    {name = "subham"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "faiss-cpu (>=1.9.0.post1,<2.0.0)",
    "langchain (>=0.3.16,<0.4.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "sentence-transformers (>=3.4.0,<4.0.0)",
    "langchain-ollama (>=0.2.2,<0.3.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
